--- a/article-detail-20.html
+++ b/article-detail-20.html
@@ -14,7 +14,7 @@
     <!-- 메타태그정보 //-->
     <!-- META -->
     <link rel="canonical" href="https://blog.hailrain.site" />
-    <meta name="subject" content="MySQL) 문자열 합치기 CONCAT" />
+    <meta name="subject" content="기타) putty 명령어" />
     <meta name="title" content="DLOG" />
     <meta name="keywords" content="HTML, CSS, JAVASCRIPT, JAVA, SPRING, MySQL, 리눅스, 리액트" />
     <meta name="copyright" content="DLOG" />
@@ -23,12 +23,18 @@
     <!-- OPENGRAPH -->
     <meta property="og:site_name" content="DLOG" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="MySQL) 문자열 합치기 CONCAT" />
-    <meta property="og:description" content=" CONCAT
-MySql
-CONCAT문자열
-
- 문자열" />
+    <meta property="og:title" content="기타) putty 명령어" />
+    <meta property="og:description" content=" 명령어 정리 
+   history  현재까지 입력했던 명령어 보기
+   history  fgrep 키워드  현재까지 입력했던 명령어중 키워드로 검색해서 보기
+   pwd  현재 디렉토리 경로위치 보기
+   wget 주소  다운로드
+   wget 주소  파일명  파일명을 지정해서 다운로드
+   ls  현재 디렉토리에 있는 파일 목록
+   rm 파일명  파일 삭제
+   cat  파일 보기
+   ls alh  권한 보기
+" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image" content="/logoimage/logo.png" />
     <meta property="og:image:alt" content="blog.hailrain.site" />
@@ -39,26 +45,38 @@ CONCAT문자열
     <meta property="og:url" content="https://blog.hailrain.site" />
     <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="MySQL) 문자열 합치기 CONCAT" />
+    <meta name="twitter:title" content="기타) putty 명령어" />
     <meta name="twitter:site" content="@DLOG" />
     <meta name="twitter:creator" content="@DLOG" />
     <meta name="twitter:image" content="logoimage/logo.png">
-    <meta name="twitter:description" content=" CONCAT
-MySql
-CONCAT문자열
-
- 문자열" />
+    <meta name="twitter:description" content=" 명령어 정리 
+   history  현재까지 입력했던 명령어 보기
+   history  fgrep 키워드  현재까지 입력했던 명령어중 키워드로 검색해서 보기
+   pwd  현재 디렉토리 경로위치 보기
+   wget 주소  다운로드
+   wget 주소  파일명  파일명을 지정해서 다운로드
+   ls  현재 디렉토리에 있는 파일 목록
+   rm 파일명  파일 삭제
+   cat  파일 보기
+   ls alh  권한 보기
+" />
     <!-- GOOGLE+ -->
     <meta itemprop="headline" content="DLOG" />
     <meta itemprop="name" content="DLOG" />
-    <meta itemprop="description" content=" CONCAT
-MySql
-CONCAT문자열
-
- 문자열" />
+    <meta itemprop="description" content=" 명령어 정리 
+   history  현재까지 입력했던 명령어 보기
+   history  fgrep 키워드  현재까지 입력했던 명령어중 키워드로 검색해서 보기
+   pwd  현재 디렉토리 경로위치 보기
+   wget 주소  다운로드
+   wget 주소  파일명  파일명을 지정해서 다운로드
+   ls  현재 디렉토리에 있는 파일 목록
+   rm 파일명  파일 삭제
+   cat  파일 보기
+   ls alh  권한 보기
+" />
     <meta itemprop="image" content="/logoimage/logo.png" />
 
-    <title>MySQL) 문자열 합치기 CONCAT | DLOG | ARTICLE DETAIL</title>
+    <title>기타) putty 명령어 | DLOG | ARTICLE DETAIL</title>
     
     <!-- GOOGLE ADSENSE -->
     <script data-ad-client="ca-pub-1940074004342489" async
@@ -142,30 +160,36 @@ href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/codemirror.min.cs
 
     <section class="article main-con flex flex-dir-col">
         <div class="article__title-bar flex flex-jc-s-bet flex-ai-c">
-            <div class="article_id flex-basis-50px">3</div>
-            <div class="article_title flex-grow-1">MySQL) 문자열 합치기 CONCAT</div>
+            <div class="article_id flex-basis-50px">20</div>
+            <div class="article_title flex-grow-1">기타) putty 명령어</div>
             <div class="article_writer flex-basis-100px"><i class="fas fa-user"></i>이명학
             </div>
-            <div class="article_regDate flex-basis-200px"><i class="fas fa-clock"></i>2021-01-14 09:05:35
+            <div class="article_regDate flex-basis-200px"><i class="fas fa-clock"></i>2021-02-04 13:27:57
             </div>
-            <div class="article_hit flex-basis-50px"><i class="fas fa-eye"></i>5</div>
+            <div class="article_hit flex-basis-50px"><i class="fas fa-eye"></i>0</div>
             <div class="article_recommend flex-basis-50px"><i
                     class="fas fa-thumbs-up"></i>0</div>
             <div class="article_comments flex-basis-50px">
                 <i class="fas fa-comment"></i>0
             </div>    
         </div>
-        <div id="viewer" class="article_body flex-grow-1"># CONCAT
-```MySql
-CONCAT('문','자','열')
-```
--> '문자열'</div>
-        <div class="article_tags"><a href="article_tag.html?tag=MYSQL&page=1">#MYSQL </a></div>
+        <div id="viewer" class="article_body flex-grow-1">- 명령어 정리 
+  - history : 현재까지 입력했던 명령어 보기
+  - history | fgrep '키워드' : 현재까지 입력했던 명령어중 키워드로 검색해서 보기
+  - pwd : 현재 디렉토리 경로위치 보기
+  - wget '주소' : 다운로드
+  - wget '주소' > '파일명' : 파일명을 지정해서 다운로드
+  - ls : 현재 디렉토리에 있는 파일 목록
+  - rm '파일명' : 파일 삭제
+  - cat : 파일 보기
+  - ls -alh : 권한 보기
+</div>
+        <div class="article_tags"></div>
         <div id="disqus_thread"></div>
         <script>
             var disqus_config = function () {
-				        this.page.url = 'https://blog.hailrain.site/it-detail-3.html';
-				        this.page.identifier = 'it-detail-3.html';
+				        this.page.url = 'https://blog.hailrain.site/it-detail-20.html';
+				        this.page.identifier = 'it-detail-20.html';
 				    };
             (function () { // DON'T EDIT BELOW THIS LINE
                 var d = document, s = d.createElement('script');
@@ -178,7 +202,7 @@ CONCAT('문','자','열')
                 Disqus.</a></noscript>
 
         <div class="article-move-vue article-move-button">
-            <div class="con next-article"><a :href="'article-detail-4.html?board=it&page='+currentPage">다음글</a></div><div class="con next-article"><a :href="'article-detail-2.html?board=it&page='+currentPage">이전글</a></div>
+            <div class="con next-article"><a :href="'article-detail-19.html?board=it&page='+currentPage">이전글</a></div>
 
         </div>
     </section>
